--- a/INST377_final/views/About.ejs
+++ b/INST377_final/views/About.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Site</title>
     <!--Statics-->
-    <link rel="stylesheet" href="/Home.css">
-    <link rel="stylesheet" href="/About.css">
-    <link rel="stylesheet" href="/Button.css">
-    <link rel="stylesheet" href="/Anime_viewing.css">
-    <link rel="stylesheet" href="/Anime_details.css">
-    <link rel="stylesheet" href="/Help.css">
+    <link rel="stylesheet" href="Home.css">
+    <link rel="stylesheet" href="About.css">
+    <link rel="stylesheet" href="Button.css">
+    <link rel="stylesheet" href="Anime_viewing.css">
+    <link rel="stylesheet" href="Anime_details.css">
+    <link rel="stylesheet" href="Help.css">
     <!--Image Slider-->
     <script src="https://rawgit.com/ruyadorno/simple-slider/master/dist/simpleslider.min.js"></script>
 </head>
