--- a/INST377_final/views/Form_Submition.ejs
+++ b/INST377_final/views/Form_Submition.ejs
@@ -410,17 +410,16 @@ h3 {
                 }
 
                 //Define functions
-                 function changePage(page) {
-                    if(page == 'home') {
-                        window.location.href = "Home.html"
+                function changePage(page) {
+                    if (page == 'home') {
+                        window.location.href = "/Home";
                     } else if (page == 'about') {
-                        window.location.href = "About.html"
+                        window.location.href = "/About";
                     } else if (page == 'help') {
-                        window.location.href = "Help.html"
+                        window.location.href = "/Help";
                     } else if (page == 'contact us') {
-                        window.location.href = "Contact_us.html"
+                        window.location.href = "/Contact_us";
                     }
-
                 }
                  
                 //function to look up the name of the anime
